# AWholeS

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
AWholeS/: __main__.py  __version__.py  cloudformation.py  ec2.py  iam.py  sts_calls.py  trusted_advisor_security.py
AWholeS/cloudformation/: cloudformation.py  menu.py
AWholeS/ec2/: ec2.py
AWholeS/iam/: dataclasses.py  iam.py  menu.py
AWholeS/sts/: sts_calls.py
AWholeS/trusted_advisor/: dataclasses.py  menu.py  trusted_advisor.py
cloudformation_templates/: iam_managed_policy_admin.yaml  iam_role_admin_inline.yaml  iam_role_admin_managed.yaml  iam_role_admin_policy.yaml  sg_open_ingress_ipv4.yaml  sg_open_ingress_ipv6.yaml
docs/tools/: README.md
