[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AWholeS"
description = "A project with various things to review the security posture in AWS"
authors = [{ "name" = "w0rmr1d3r" }]
license = { file = "LICENSE" }
classifiers = []
keywords = []
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.26"
]

[project.optional-dependencies]
dev = ["pip-tools>=6.11.0"]

[project.urls]
"Homepage" = "https://github.com/w0rmr1d3r/AWholeS"
"Repository" = "https://github.com/w0rmr1d3r/AWholeS"
"Bug Tracker" = "https://github.com/w0rmr1d3r/AWholeS/issues"
"Documentation" = "https://github.com/w0rmr1d3r/AWholeS"
"Changelog" = "https://github.com/w0rmr1d3r/AWholeS"

[tool.setuptools]
packages = ["AWholeS"]
